# asd

./: .gitignore  CASAOS_DEPLOYMENT.md  CLAUDE.md  DOCKER_DEPLOYMENT.md  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  casaos.env.example  docker-compose.casaos.yml  docker-compose.optimized.yml  docker-compose.prod.yml  docker-compose.yml
.cursor/plans/: arabseed-downloader-app-1b654536.plan.md
backend/: .dockerignore  Dockerfile  Dockerfile.distroless  Dockerfile.optimized  pyproject.toml  requirements.txt
backend/app/: __init__.py  cache.py  celery_app.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: downloads.py  search.py  settings.py  tasks.py  tracked.py
backend/app/scraper/: __init__.py  arabseed.py
backend/app/scripts/: test_extraction.py
backend/app/services/: file_organizer.py  jdownloader.py
backend/app/tasks/: __init__.py  download_monitor.py  episode_checker.py
docs/: ARCHITECTURE.md  GETTING_STARTED.md  TESTING.md  research.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/settings/: page.tsx
frontend/app/tracked/: page.tsx
frontend/app/tracked/[id]/episodes/: page.tsx
frontend/app/tracked/[id]/movie/: page.tsx
frontend/components/: navigation.tsx
scripts/: test_extraction_local.py
